--- a/custom_addons/nn_purchase_updated_workflow/reports/purchase_quotation_template.xml
+++ b/custom_addons/nn_purchase_updated_workflow/reports/purchase_quotation_template.xml
@@ -193,8 +193,6 @@
                         <span t-field="o.date_order" t-options='{"widget": "date"}' t-if="o.date_order"/>
                     </div>
                     <div class="col-auto">
-                        <strong>Expected Arrival:</strong>
-                        <span t-field="o.date_planned" t-options='{"widget": "date"}' t-if="o.date_planned"/>
                     </div>
                 </div>
 
@@ -202,15 +200,16 @@
                 <table class="table table-sm mt-4">
                     <thead style="display: table-row-group">
                         <tr>
+                            <th name="th_name">
+                                <strong>Name</strong>
+                            </th>
                             <th name="th_description">
                                 <strong>Description</strong>
                             </th>
                             <th name="th_barcode">
                                 <strong>PN</strong>
                             </th>
-                            <th name="th_expected_date" class="text-center">
-                                <strong>Expected Date</strong>
-                            </th>
+
                             <th name="th_quantity" class="text-end">
                                 <strong>Qty</strong>
                             </th>
@@ -224,12 +223,13 @@
                                         <span t-field="order_line.name"/>
                                     </td>
                                     <td id="product">
+                                        <span t-field="order_line.description_purchase"/>
+                                    </td>
+                                    <td id="product">
                                         <span t-field="order_line.barcode"/>
                                     </td>
 
-                                    <td class="text-center">
-                                        <span t-field="order_line.date_planned"/>
-                                    </td>
+
                                     <td class="text-end">
                                         <span t-field="order_line.product_qty"/>
                                         <span t-field="order_line.product_uom" groups="uom.group_uom"/>
