--- a/custom_addons/nn_crm_updated_workflow/views/crm_lead_views.xml
+++ b/custom_addons/nn_crm_updated_workflow/views/crm_lead_views.xml
@@ -17,7 +17,7 @@
                 <button name="action_create_quotation"
                         type="object"
                         string="Créer un Devis"
-                        class="btn-primary" invisible="sale_quotation_created"/>
+                        class="btn-primary"     />
                 <button name="action_create_rfq"
                         type="object"
                         string="Create RFQ"
