Crm Final product LIst : - added the new field : rfq_service inside final list
- when creating rfq it will take the service that rfq_service true

--- a/custom_addons/nn_crm_updated_workflow/views/crm_lead_views.xml
+++ b/custom_addons/nn_crm_updated_workflow/views/crm_lead_views.xml
@@ -94,6 +94,7 @@
                             <field name="quantity"/>
                             <field name="uom_id"/>
                             <field name="price_unit"/>
+                            <field name="rfq_service" invisible="detailed_type != 'service'"/>
                         </tree>
                     </field>
                 </page>
