--- a/custom_addons/nn_commercial_docs/reports/account_invoice_report_templates.xml
+++ b/custom_addons/nn_commercial_docs/reports/account_invoice_report_templates.xml
@@ -332,7 +332,8 @@
                                             <span class="text-nowrap" t-field="line.discount">0</span>
                                         </td>
                                         <t t-set="taxes"
-                                           t-value="', '.join([(tax.invoice_label or tax.name) for tax in line.tax_ids])"/>
+                                           t-value="', '.join([(tax.invoice_label or tax.name) for tax in line.tax_ids if tax.amount != 1])"/>
+
                                         <td name="td_taxes"
                                             t-attf-class="text-start {{ 'd-none d-md-table-cell' if report_type == 'html' else '' }} {{ 'text-nowrap' if len(taxes) &lt; 10 else '' }}">
                                             <span t-out="taxes" id="line_tax_ids">Tax 15%</span>
