Commercial doc Updated: - Sale order and quotation is updated - invoice report also updated - purchase rfq report where header isn't appearing has been replaced with new report : by creating a new action report and new termplate and hiding the old one ps : bug fixed but it needs cleaning by adding the page background

--- a/custom_addons/nn_commercial_docs/reports/sale_order_report.xml
+++ b/custom_addons/nn_commercial_docs/reports/sale_order_report.xml
@@ -5,7 +5,7 @@
 
 
 <template id="sale.report_saleorder_document">
-    <t t-call="web.external_layout">
+        <t t-call="nn_commercial_docs.external_layout_new">
         <t t-set="doc" t-value="doc.with_context(lang=doc.partner_id.lang)" />
         <t t-set="forced_vat" t-value="doc.fiscal_position_id.foreign_vat"/> <!-- So that it appears in the footer of the report instead of the company VAT if it's set -->
         <t t-set="address">
@@ -38,8 +38,19 @@
             </t>
         </t>
 <t t-set="company" t-value="doc.company_id or env.company"/>
-<t t-set="logo_base64" t-value="image_data_uri(company.logo)"/>
-<div class="page" t-attf-style="background-image:url('/nn_commercial_docs/static/img/img.png'); background-size:195mm 282mm; width:195mm; height:250mm; background-repeat:no-repeat; background-position: center; background-blend-mode: lighten; background-color: rgba(255, 255, 255, 0.99); border: none;">
+<t t-set="bg_logo" t-value="image_data_uri(company.background_logo)"/>
+            <div class="page"
+                 t-attf-style="background-image: url('{{ bg_logo }}');
+                   background-size: 290mm auto;
+                   background-repeat: no-repeat;
+                   background-position: -70mm 40mm;
+                   background-blend-mode: lighten;
+                   background-color: rgba(255, 255, 255, 0.99);
+                   width: 195mm;
+                   height: 250mm;
+                   border: none;
+                   opacity: 0.1;">
+
             <div class="oe_structure"/>
             <h2 class="mt-4">
                 <span t-if="env.context.get('proforma', False) or is_pro_forma">Pro-Forma Invoice # </span>
