--- a/custom_addons/nn_commercial_docs/views/res_company_form.xml
+++ b/custom_addons/nn_commercial_docs/views/res_company_form.xml
@@ -7,6 +7,8 @@
             <!-- Locate the phone field and insert fax right after -->
             <xpath expr="//field[@name='phone']" position="after">
                 <field name="fax"/>
+                <field name="background_logo" invisible="0"/>
+
             </xpath>
         </field>
     </record>
